    2. Fixed minor bug with absolute paths

* versions 1.5.x.10 and 1.0.x.10
    1. Added new option to work with GTranslate Pro version
    2. Fixed minor bugs

* versions 1.5.x.11 and 1.0.x.11
    1. New option to open translated page in a new window

* versions 1.5.x.12 and 1.0.x.12
    1. Added alpha flag mouseover effect

* versions 1.5.x.13 and 1.0.x.13
    1. Added Persian language support
    2. Fixed a bug causing invalid xHTML markup

* versions 1.5.x.14 and 1.0.x.14
    1. Added 9 new languages such as Afrikaans, Belarusian, Icelandic, Irish and Welsh

* version 1.5.x.15
    1. Possibility to translate the website on fly, without redirecting to Google Translator page, so you will not see the top frame at all. It will also enable the translation of non-public pages!

Version for Joomla! 1.0.x is discontinued.

* version 1.5.x.16
    1. Fixed jQuery conflict with MooTools and non-valid XHTML bug
    2. Upgraded jQuery library version
    3. Added new feature to use default Google On Fly translator

* version 1.5.x.17
    1. Upgraded jQuery Translate library
    2. Now the main language is bold in drop-down list, so users can easily return to the main language.

* version 1.5.x.18
    1. Languages are in alphabetical order
    2. New toggle option in On Fly mode to easily return to original language.

* version 1.5.x.19
    1. Updated jQuery Translator library version to 1.4.4

* version 1.5.x.20
    1. Changed jQuery Translator library version to 1.4.6
    2. Changed jQuery library version to 1.4.2
    3. Added 6 new languages: Armenian, Azerbaijani, Basque, Georgian, Haitian Creole, Urdu
    4. Fixed minor issues in doTranslate function

* version 1.5.x.21
    1. Ability to choose between GB & US, ES & MX, PT & BR flags
    2. Added check for J_JQUERY_LOADED constant before loading the jQuery library
    3. Moved global definitions from style attribute into CSS
    4. jQuery translator uses pt for Portuguese instead of pt-PT now